Make sure there is an error set when returning FALSE

https://bugzilla.gnome.org/show_bug.cgi?id=660993